crates/toml_edit/tests/fixtures/invalid/datetime-malformed-no-secs.stderr
TOML parse error at line 1, column 27
  |
1 | no-secs = 1987-07-05T17:45Z
  |                           ^
Invalid date-time
